@@ -182,6 +182,13 @@ CVS code -
 	- If we use the --disable-wrapping option, ignore the
 	  --disable-wrapping-as-root option. (DLR)
 	- Add minor cosmetic tweaks. (DLR)
+- doc/Makefile.am:
+	- Don't include nanorc.sample in EXTRA_DIST, as it's only useful
+	  when we're building from source, as opposed to building a
+	  distribution. (DLR)
+	- Tweak to remove usage of the += operator again. (DLR)
+- doc/man/Makefile.am:
+	- Tweak to remove usage of the += operator again. (DLR)
 - doc/faq.html:
 	- Update section 5.3 again to not state "the latest development
 	  version" before 1.3.12, as it's no longer accurate. (DLR)
